version/0.11/_sources/api/ansys/geometry/core/misc/options/ImportOptions.rst.txt






:class:`ImportOptions`
======================


.. py:class:: ansys.geometry.core.misc.options.ImportOptions

   
   Import options when opening a file.


   :Parameters:

       **cleanup_bodies** : :ref:`bool <python:bltin-boolean-values>` = :data:`python:False`
           Simplify geometry and clean up topology.

       **import_coordinate_systems** : :ref:`bool <python:bltin-boolean-values>` = :data:`python:False`
           Import coordinate systems.

       **import_curves** : :ref:`bool <python:bltin-boolean-values>` = :data:`python:False`
           Import curves.

       **import_hidden_components_and_geometry** : :ref:`bool <python:bltin-boolean-values>` = :data:`python:False`
           Import hidden components and geometry.

       **import_names** : :ref:`bool <python:bltin-boolean-values>` = :data:`python:False`
           Import names of bodies and curves.

       **import_planes** : :ref:`bool <python:bltin-boolean-values>` = :data:`python:False`
           Import planes.

       **import_points** : :ref:`bool <python:bltin-boolean-values>` = :data:`python:False`
           Import points.

       **import_named_selections** : :ref:`bool <python:bltin-boolean-values>` = :data:`python:True`
           Import the named selections associated with the root component being inserted.














   ..
       !! processed by numpydoc !!


.. py:currentmodule:: ImportOptions

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~to_dict`
            - Provide the dictionary representation of the ImportOptions class.



   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~cleanup_bodies`
            - 
          * - :py:attr:`~import_coordinate_systems`
            - 
          * - :py:attr:`~import_curves`
            - 
          * - :py:attr:`~import_hidden_components_and_geometry`
            - 
          * - :py:attr:`~import_names`
            - 
          * - :py:attr:`~import_planes`
            - 
          * - :py:attr:`~import_points`
            - 
          * - :py:attr:`~import_named_selections`
            - 






Import detail
-------------

.. code-block:: python

    from ansys.geometry.core.misc.options import ImportOptions


Attribute detail
----------------

.. py:attribute:: cleanup_bodies
   :type:  bool
   :value: False


.. py:attribute:: import_coordinate_systems
   :type:  bool
   :value: False


.. py:attribute:: import_curves
   :type:  bool
   :value: False


.. py:attribute:: import_hidden_components_and_geometry
   :type:  bool
   :value: False


.. py:attribute:: import_names
   :type:  bool
   :value: False


.. py:attribute:: import_planes
   :type:  bool
   :value: False


.. py:attribute:: import_points
   :type:  bool
   :value: False


.. py:attribute:: import_named_selections
   :type:  bool
   :value: True




Method detail
-------------

.. py:method:: to_dict()

   
   Provide the dictionary representation of the ImportOptions class.
















   ..
       !! processed by numpydoc !!




